--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Mouhamet Latyr NDIAYE - Magamou GUEYE",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
