--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
     "mongoose": "^6.1.2",
+    "nodemailer": "^6.7.2",
     "nodemon": "^2.0.15"
   }
 }
