--- a/package.json
+++ b/package.json
@@ -13,10 +13,15 @@
   "author": "Mouhamet Latyr NDIAYE - Magamou GUEYE",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.32.0",
+    "@aws-sdk/node-http-handler": "^3.32.0",
+    "aws-sdk": "^2.1048.0",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.1.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.2",
     "nodemailer": "^6.7.2",
     "nodemon": "^2.0.15"
